Bug 1264896 - Kill off nsIRemoteTagService and do what it does, in its sole caller, in far-faster C++.  r=billm